Fix firebase create Product