@@ -1,190 +1,104 @@
 package com.example.bloomgift.service;
 
-import com.google.cloud.storage.Acl;
-import com.google.cloud.storage.Blob;
-import com.google.cloud.storage.BlobId;
-import com.google.cloud.storage.BlobInfo;
-import com.google.cloud.storage.Bucket;
-import com.google.cloud.storage.Storage;
-import com.google.cloud.storage.StorageException;
-import com.google.cloud.storage.StorageOptions;
+import com.google.cloud.storage.*;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.io.ByteArrayResource;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.io.IOException;
 import java.net.URL;
 import java.net.URLDecoder;
-import java.io.UnsupportedEncodingException;
-import java.io.IOException;
-import java.net.URLDecoder;
-import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.UUID;
-import java.util.concurrent.TimeUnit;
 import java.util.logging.Level;
-
 import java.util.logging.Logger;
 
 @Service
 public class FirebaseStorageService {
     private static final Logger logger = Logger.getLogger(FirebaseStorageService.class.getName());
-    private final String BUCKET_NAME = "bloom-gift-67f83.appspot.com";
+    private static final String BUCKET_NAME = "bloomgift2.appspot.com";
 
-    // public String uploadFileByAdmin(MultipartFile file, String email) throws
-    // IOException {
-    // Storage storage = StorageOptions.getDefaultInstance().getService();
-    // Bucket bucket = storage.get(BUCKET_NAME);
+    private final Storage storage;
 
-    // String sanitizedEmail = email.replaceAll("[@.]", "_");
-    // String folderPath = "authen/" + "user-admin/" + "avatar/" + sanitizedEmail +
-    // "/";
-    // String fileName = UUID.randomUUID().toString() + "-" +
-    // file.getOriginalFilename();
-    // String fullPath = folderPath + fileName;
+    @Autowired
+    public FirebaseStorageService(Storage storage) {
+        this.storage = storage;
+    }
 
-    // try {
-    // Blob blob = bucket.create(fullPath, file.getBytes(),
-    // file.getContentType() != null ? file.getContentType() :
-    // "application/octet-stream");
-    // logger.info("File " + fullPath + " uploaded successfully to bucket: " +
-    // BUCKET_NAME);
-    // return blob.getMediaLink();
-    // } catch (IOException e) {
-    // logger.log(Level.SEVERE, "Error uploading file", e);
-    // throw new IOException("Failed to upload file", e);
-    // }
+    public String getDownloadUrl(String filePath) throws IOException {
+        Blob blob = storage.get(BlobId.of(BUCKET_NAME, filePath));
+        if (blob != null) {
+            return blob.getMediaLink();
+        } else {
+            throw new IOException("File not found: " + filePath);
+        }
+    }
 
-    // }
-
-    public String uploadFileByAdmin(MultipartFile file, String email) throws IOException {
-        Storage storage = StorageOptions.getDefaultInstance().getService();
-        Bucket bucket = storage.get(BUCKET_NAME);
-
-        String sanitizedEmail = email.replaceAll("[@.]", "_");
-        String folderPath = "authen/" + "user-admin/" + "avatar/" + sanitizedEmail +
-                "/";
-        String fileName = UUID.randomUUID().toString() + "-" +
-                file.getOriginalFilename();
+    private String uploadFile(MultipartFile file, String folderPath) throws IOException {
+        String fileName = UUID.randomUUID().toString() + "-" + file.getOriginalFilename();
         String fullPath = folderPath + fileName;
 
-        try {
-            Blob blob = bucket.create(fullPath, file.getBytes(),
-                    file.getContentType() != null ? file.getContentType() : "application/octet-stream");
+        BlobId blobId = BlobId.of(BUCKET_NAME, fullPath);
+        BlobInfo blobInfo = BlobInfo.newBuilder(blobId)
+                .setContentType(file.getContentType())
+                .build();
 
-            blob.createAcl(Acl.of(Acl.User.ofAllUsers(), Acl.Role.READER));
+        storage.create(blobInfo, file.getBytes());
+        storage.createAcl(blobId, Acl.of(Acl.User.ofAllUsers(), Acl.Role.READER));
 
-            logger.info("File " + fullPath + " uploaded successfully to bucket: " +
-                    BUCKET_NAME);
+        logger.info("File " + fullPath + " uploaded successfully to bucket: " + BUCKET_NAME);
+        return "https://storage.googleapis.com/" + BUCKET_NAME + "/" + fullPath;
+    }
 
-            String publicUrl = "https://storage.googleapis.com/" + BUCKET_NAME + "/" +
-                    fullPath;
-            return publicUrl;
-
-        } catch (IOException e) {
-            logger.log(Level.SEVERE, "Error uploading file", e);
-            throw new IOException("Failed to upload file", e);
-        }
+    public String uploadFileByAdmin(MultipartFile file, String email) throws IOException {
+        String sanitizedEmail = email.replaceAll("[@.]", "_");
+        String folderPath = "authen/user-admin/avatar/" + sanitizedEmail + "/";
+        return uploadFile(file, folderPath);
     }
 
     public String uploadFileByCustomer(MultipartFile file, String email) throws IOException {
-        Storage storage = StorageOptions.getDefaultInstance().getService();
-        Bucket bucket = storage.get(BUCKET_NAME);
-
         String sanitizedEmail = email.replaceAll("[@.]", "_");
-        String folderPath = "authen/" + "user-customer/" + "avatar/" + sanitizedEmail + "/";
-        String fileName = UUID.randomUUID().toString() + "-" + file.getOriginalFilename();
-        String fullPath = folderPath + fileName;
-
-        try {
-            Blob blob = bucket.create(fullPath, file.getBytes(),
-                    file.getContentType() != null ? file.getContentType() : "application/octet-stream");
-
-            blob.createAcl(Acl.of(Acl.User.ofAllUsers(), Acl.Role.READER));
-
-            logger.info("File " + fullPath + " uploaded successfully to bucket: " +
-                    BUCKET_NAME);
-
-            String publicUrl = "https://storage.googleapis.com/" + BUCKET_NAME + "/" +
-                    fullPath;
-            return publicUrl;
-        } catch (IOException e) {
-            logger.log(Level.SEVERE, "Error uploading file", e);
-            throw new IOException("Failed to upload file", e);
-        }
+        String folderPath = "authen/user-customer/avatar/" + sanitizedEmail + "/";
+        return uploadFile(file, folderPath);
     }
 
     public String uploadFileByProduct(MultipartFile file, String storeName, String productName) throws IOException {
-        Storage storage = StorageOptions.getDefaultInstance().getService();
-        Bucket bucket = storage.get(BUCKET_NAME);
         String sanitizedStoreName = storeName.replaceAll("[^a-zA-Z0-9]", "_");
         String folderPath = "products/" + sanitizedStoreName + "/" + productName + "/";
-        String fileName = UUID.randomUUID().toString() + "-" + file.getOriginalFilename();
-
-        String fullPath = folderPath + fileName;
-        try {
-            Blob blob = bucket.create(fullPath, file.getBytes(),
-                    file.getContentType() != null ? file.getContentType() : "application/octet-stream");
-
-            blob.createAcl(Acl.of(Acl.User.ofAllUsers(), Acl.Role.READER));
-
-            logger.info("File " + fullPath + " uploaded successfully to bucket: " +
-                    BUCKET_NAME);
-
-            String publicUrl = "https://storage.googleapis.com/" + BUCKET_NAME + "/" +
-                    fullPath;
-            return publicUrl;
-
-        } catch (IOException e) {
-            logger.log(Level.SEVERE, "Error uploading file", e);
-            throw new IOException("Failed to upload file", e);
-        }
+        return uploadFile(file, folderPath);
     }
 
     public String updateImagetoFireBase(MultipartFile file, String folder) throws IOException {
-        Storage storage = StorageOptions.getDefaultInstance().getService();
-        Bucket bucket = storage.get(BUCKET_NAME);
-        String fileName = folder + UUID.randomUUID().toString() + "-" + file.getOriginalFilename();
-        Blob blob = bucket.create(fileName, file.getBytes(), file.getContentType());
-        return blob.getMediaLink();
+        return uploadFile(file, folder);
     }
 
-    public void deleteFileFromFirebase(String fileUrl, String productName, String storeName)
-            throws UnsupportedEncodingException {
-        String sanitizedStoreName = storeName.replaceAll("[^a-zA-Z0-9]", "_");
-        String folderPath = "products/" + sanitizedStoreName + "/" + productName + "/";
-        String decodedUrl = URLDecoder.decode(fileUrl, "UTF-8");
-        System.out.println("Decoded URL: " + decodedUrl);
+    public void deleteFileFromFirebase(String fileUrl, String productName, String storeName) {
+        try {
+            String sanitizedStoreName = storeName.replaceAll("[^a-zA-Z0-9]", "_");
+            String folderPath = "products/" + sanitizedStoreName + "/" + productName + "/";
+            String decodedUrl = URLDecoder.decode(fileUrl, StandardCharsets.UTF_8);
+            String fileName = decodedUrl.substring(decodedUrl.lastIndexOf("/") + 1, decodedUrl.indexOf("?"));
+            String fullPath = folderPath + fileName;
 
-        String fileName = decodedUrl.substring(decodedUrl.lastIndexOf("/") + 1, decodedUrl.indexOf("?"));
-        System.out.println("File Name: " + fileName);
-        String fullPath = folderPath + fileName;
+            BlobId blobId = BlobId.of(BUCKET_NAME, fullPath);
+            boolean deleted = storage.delete(blobId);
 
-        Storage storage = StorageOptions.getDefaultInstance().getService();
-
-        Bucket bucket = storage.get(BUCKET_NAME);
-        if (bucket == null) {
-            System.out.println("Bucket not found: " + BUCKET_NAME);
-            return;
+            if (deleted) {
+                logger.info("File deleted successfully: " + fileName);
+            } else {
+                logger.warning("File not found or not deleted: " + fileName);
+            }
+        } catch (Exception e) {
+            logger.log(Level.SEVERE, "Error deleting file", e);
         }
-
-        Blob blob = bucket.get(fullPath);
-        if (blob == null) {
-            System.out.println("Blob not found for file: " + fileName);
-            return;
-        }
-
-        blob.delete();
-        System.out.println("File deleted successfully: " + fileName);
     }
 
     public void deleteFile(String fileUrl) {
         try {
-            Storage storage = StorageOptions.getDefaultInstance().getService();
-
             URL url = new URL(fileUrl);
             String path = url.getPath();
-            String decodedPath = URLDecoder.decode(path, StandardCharsets.UTF_8.name());
-
+            String decodedPath = URLDecoder.decode(path, StandardCharsets.UTF_8);
             String objectName = decodedPath.replaceFirst("/" + BUCKET_NAME + "/", "");
             BlobId blobId = BlobId.of(BUCKET_NAME, objectName);
             boolean deleted = storage.delete(blobId);
@@ -200,29 +114,20 @@ public class FirebaseStorageService {
     }
 
     public ByteArrayResource downloadFile(String fileName) throws IOException {
-        Storage storage = StorageOptions.getDefaultInstance().getService();
-        Bucket bucket = storage.get(BUCKET_NAME);
+        Blob blob = storage.get(BlobId.of(BUCKET_NAME, fileName));
 
-        Blob blob = bucket.get(fileName);
-
-        if (blob == null || !blob.exists()) {
+        if (blob == null) {
             logger.warning("File " + fileName + " not found in bucket: " + BUCKET_NAME);
             throw new IOException("File not found: " + fileName);
         }
 
-        try {
-            byte[] content = blob.getContent();
-            logger.info("File " + fileName + " downloaded successfully.");
-            return new ByteArrayResource(content);
-        } catch (StorageException e) {
-            logger.log(Level.SEVERE, "Error downloading file: " + fileName, e);
-            throw new IOException("Failed to download file: " + fileName, e);
-        }
+        byte[] content = blob.getContent();
+        logger.info("File " + fileName + " downloaded successfully.");
+        return new ByteArrayResource(content);
     }
 
     public void deleteFileFromURL(String imageUrl) {
         try {
-            Storage storage = StorageOptions.getDefaultInstance().getService();
             String fileName = URLDecoder.decode(imageUrl.substring(imageUrl.lastIndexOf("/") + 1),
                     StandardCharsets.UTF_8);
             BlobId blobId = BlobId.of(BUCKET_NAME, fileName);
@@ -234,5 +139,4 @@ public class FirebaseStorageService {
             throw new RuntimeException("Failed to delete file from Firebase: " + imageUrl, e);
         }
     }
-
 }
